z-index fix for #player

--- a/css/napster.css
+++ b/css/napster.css
@@ -200,6 +200,7 @@ body
 	width				: 97.3%;
 	height				: 50px;
 	top					: 50px;
+	z-index				: 1000;
 }
 #player:after {
 	top					: 0px;
